<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Liste de Course</string>
    <string name="action_settings">Settings</string>
    <string name="Poissonerie">Poissonerie</string>
    <string name="Charcuterie">Charcuterie</string>
    <string name="Boulangerie">Boulangerie</string>
    <string name="Fruits">Fruits</string>
    <string name="Laitiers">Laitiers</string>
    <string name="Legumes">Légumes</string>
    <string name="Boucherie">Boucherie</string>

</resources>
