<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:backgroundTint="@drawable/ic_launcher"
    android:background="#ffff98ee"
    android:orientation="vertical"
    tools:ignore="UnusedAttribute">






    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Fruits"
        android:background="@drawable/fruit"
        android:id="@+id/fruit"
        android:layout_marginTop="2dp"

        />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Laitiers"
        android:background="@drawable/laitier"
        android:id="@+id/laitiers"
        android:layout_marginTop="2dp"

        />
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Legumes"
        android:background="@drawable/legume"
        android:id="@+id/legume"
        android:layout_marginTop="2dp"

        />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Boucherie"
        android:background="@drawable/boucherie"
        android:id="@+id/boucherie"
        android:layout_marginTop="2dp"

        />
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Poissonerie"
        android:background="@drawable/poissonerie"
        android:id="@+id/poissonerie"
        android:layout_marginTop="2dp"

        />
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Boulangerie"
        android:background="@drawable/boulangerie"
        android:id="@+id/boulangerie"
        android:layout_marginTop="2dp"

        />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Charcuterie"
        android:background="@drawable/charcuterie"
        android:id="@+id/charcuterie"
        android:layout_marginTop="2dp"

        />

</LinearLayout>
